--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
@@ -20,37 +17,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/">
 
     <!-- Primary Meta Tags -->
-    <title>@Angelo | Michael Angelo Ga Personal Website</title>
-  <meta name="title" content="Michael Angelo Ga">
-    <meta name="description"
-	  content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
+    <title>@AngeloGa | Michael Angelo Ga Personal Website</title>
+    <meta name="title" content="Michael Angelo Ga">
+    <meta name="description" content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
     <meta name="keywords" content="angelo">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://michael-angelo.ga/">
+  <meta property="og:url" content="https://www.facebook.com/profile.php?id=100025844200241">
     <meta property="og:title" content="angelo">
-    <meta property="og:description"
-	  content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
+    <meta property="og:description" content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
     <meta property="og:image" content="https://michael-angelo.ga/angelo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://michael-angelo.ga/">
     <meta property="twitter:title" content="angelo">
-    <meta property="twitter:description"
-	  content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
+    <meta property="twitter:description" content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
     <meta property="twitter:image" content="https://michael-angelo.ga/angelo.jpg">
-
 
     <script type="application/ld+json">
     {
         "@context": "http://schema.org/",
         "@type": "Person",
         "name": "Michael Angelo Ga",
-        "image": "https://avatars3.githubusercontent.com/u/15014041",
+        "image": "https://michael-angelo.ga/angelo.jpg",
         "jobTitle": "Software Developer",
-        "email": "mailto:jobin@michael-angelo.ga",
+        "email": "mailto:support@michael-angelo.ga",
         "url": "https://michael-angelo.ga/",
         "homeLocation" : {
             "@type" : "Place",
@@ -229,19 +222,14 @@
 
 
 
-        <h1>ᴹⁱᶜʰᵃᵉˡ ᴬⁿᵍᵉˡᵒ ᴳᵃ</h1>
-        <p class="mb-0">
-		  Eating is life.
-            <br>
-            kaon, tulog, mos-un
-        </p>
-        <p>Adik sa picture²x kg kis a wala ligu²x.</p>
+	  <h1>Michael Angelo Ga</h1>
+        <p class="mb-0">Hi!.
+		  <br> Ako nga pala si Angelo na </p>
+        <p> Mahal na Mahal ka.</p>
 	  <p>Jordan, Guimaras, Philippines.</p>
-
         <br>
-
         <div class="social-icons">
-            <a target="_blank" href="https://github.com/angelo">
+		  <a target="_blank" href="https://www.facebook.com/profile.php?id=100025844200241">
 			  
 			  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="-204.79995 -341.33325 1774.9329 2047.9995"
                     style=" fill:#000000;">
