--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <!-- Primary Meta Tags -->
     <title>@AngeloGa | Michael Angelo Ga Personal Website</title>
     <meta name="title" content="Michael Angelo Ga">
-    <meta name="description" content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
+    <meta name="description" content="Michael Angelo Ga, Official Website">
     <meta name="keywords" content="angelo">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.facebook.com/profile.php?id=100025844200241">
+    <meta property="og:url" content="https://www.facebook.com/profile.php?id=100025844200241">
     <meta property="og:title" content="angelo">
-    <meta property="og:description" content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
+    <meta property="og:description" content="Michael Angelo Ga, Official Website">
     <meta property="og:image" content="https://michael-angelo.ga/angelo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://michael-angelo.ga/">
     <meta property="twitter:title" content="angelo">
-    <meta property="twitter:description" content="Michael Angelo Ga, Developer by profession. Trying to be a jack of all trades. Software Developer, Electronics Hacker, Entrepreneur, Student, Technology Enthusiast.">
+    <meta property="twitter:description" content="Michael Angelo Ga, Official Website">
     <meta property="twitter:image" content="https://michael-angelo.ga/angelo.jpg">
 
     <script type="application/ld+json">
