--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="angelo">
-
+    <meta name="author" content="Michael Angelo Ga">
+    
+    <title>Michael Angelo Ga</title>
+	  
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
