--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="Michael Angelo Ga">
+    <meta name="author" content="angelo">
     
     <title>Michael Angelo Ga</title>
 	  
