--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/">
 
     <!-- Primary Meta Tags -->
-    <title>@AngeloGa | Michael Angelo Ga Personal Website</title>
+    <title>Home | Michael Angelo Ga</title>
     <meta name="title" content="Michael Angelo Ga">
     <meta name="description" content="Michael Angelo Ga, Official Website">
     <meta name="keywords" content="angelo">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.facebook.com/profile.php?id=100025844200241">
+    <meta property="og:url" content="https://www.fb.com/profile.php?id=100025844200241">
     <meta property="og:title" content="angelo">
     <meta property="og:description" content="Michael Angelo Ga, Official Website">
     <meta property="og:image" content="https://michael-angelo.ga/angelo.jpg">
@@ -219,11 +219,11 @@
 
 
 	  <h1>Michael Angelo Ga</h1>
-        <p class="mb-0">Hi!.
-		  <br> Ako nga pala si Angelo na </p>
-        <p> Mahal na Mahal ka.</p>
+      <p class="mb-0">Hi!.
+	  <br> Ako nga pala si Angelo na </p>
+      <p> Mahal na Mahal ka.</p>
 	  <p>Jordan, Guimaras, Philippines.</p>
-        <br>
+       <br>
         <div class="social-icons">
 		  <a target="_blank" href="https://www.facebook.com/profile.php?id=100025844200241">
 			  
